Add the true-north-insights aplication ot the true north apps
